--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,10 +7,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: get repo
-      - uses: actions/checkout@v5
+        uses: actions/checkout@v5
 
       - name: setup Node
-      - uses: actions/setup-node@v5
+        uses: actions/setup-node@v5
         with:
            node-version: 18
 
