--- a/apps/frontend/tsconfig.json
+++ b/apps/frontend/tsconfig.json
@@ -3,6 +3,9 @@
   "compilerOptions": {
     "baseUrl": ".",
     "outDir": "./dist/out-tsc",
+     "types": [
+      // Удалить "node" если он здесь указан
+    ],
     "sourceMap": true,
     "declaration": false,
     "downlevelIteration": true,
@@ -11,6 +14,7 @@
     "module": "ES2022",
     "target": "ES2022",
     "typeRoots": ["../../node_modules/@types"],
+    "skipLibCheck": true,
     "lib": ["ES2022", "DOM"]
   }
 }
