--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,5 @@
 name: Deploy dashboard app
-on: 
+on:
   push:
     branches: [main]
 jobs:
@@ -12,9 +12,9 @@ jobs:
       - name: setup Node
         uses: actions/setup-node@v5
         with:
-           node-version: 18
+          node-version: '22'
+          cache: 'npm'
 
-    
       - name: Restore Node.js cache
         id: cache-node-modules
         uses: actions/cache/restore@v4
@@ -48,4 +48,3 @@ jobs:
 
       - name: Deploying
         run: echo 'Deploying...'
-        
