--- a/apps/frontend/project.json
+++ b/apps/frontend/project.json
@@ -21,10 +21,11 @@
             "input": "apps/frontend/public"
           }
         ],
+
         "styles": [
-          "apps/frontend/node_modules/bootstrap/dist/css/bootstrap.min.css",
-          "apps/frontend/node_modules/bootstrap-icons/font/bootstrap-icons.css",
-          "apps/frontend/src/styles.css"
+          "node_modules/bootstrap/dist/css/bootstrap.min.css",
+          "node_modules/bootstrap-icons/font/bootstrap-icons.css",
+          "src/styles.css"
         ],
         "scripts": []
       },
