--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,7 +33,7 @@ jobs:
 
       - name: Install dependencies
         run: npm ci
-        working-directory: apps/fronend
+        working-directory: apps/frontend
 
       # Исправление: Angular строит в dist/, не в build/
       - name: Build project
