--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,7 +49,7 @@ jobs:
 
       # Исправление: Angular строит в dist/, не в build/
       - name: Build project
-        run: npm run build
+        run: npm run build:prod
         working-directory: apps/frontend
 
       # Исправление: правильный путь для Angular build
