--- a/apps/frontend/project.json
+++ b/apps/frontend/project.json
@@ -1,5 +1,5 @@
 {
-  "name": "frontend",
+  "name": "front-end",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "projectType": "application",
   "prefix": "app",
@@ -15,6 +15,12 @@
         "browser": "apps/frontend/src/main.ts",
         "polyfills": ["zone.js"],
         "tsConfig": "apps/frontend/tsconfig.app.json",
+        "fileReplacements": [
+          {
+            "replace": "src/enviroments/enviroments.ts",
+            "with": "apps/frontend/src/enviroments/enviroment.prod.ts"
+          }
+        ],
         "assets": [
           {
             "glob": "**/*",
@@ -25,7 +31,7 @@
         "styles": [
           "node_modules/bootstrap/dist/css/bootstrap.min.css",
           "node_modules/bootstrap-icons/font/bootstrap-icons.css",
-          "src/styles.css"
+          "apps/frontend/src/styles.css"
         ],
         "scripts": []
       },
@@ -43,12 +49,24 @@
               "maximumError": "4kb"
             }
           ],
+          "fileReplacements": [
+            {
+              "replace": "src/enviroments/enviroments.ts",
+              "with": "apps/frontend/src/enviroments/enviroment.prod.ts"
+            }
+          ],
           "outputHashing": "all"
         },
         "development": {
           "optimization": false,
           "extractLicenses": false,
-          "sourceMap": true
+          "sourceMap": true,
+          "fileReplacements": [
+            {
+              "replace": "apps/frontend/src/enviroments/enviroments.ts",
+              "with": "apps/frontend/src/enviroments/enviroment.prod.ts"
+            }
+          ]
         }
       },
       "defaultConfiguration": "production"
@@ -57,10 +75,10 @@
       "executor": "@angular-devkit/build-angular:dev-server",
       "configurations": {
         "production": {
-          "buildTarget": "frontend:build:production"
+          "buildTarget": "fron-tend:build:production"
         },
         "development": {
-          "buildTarget": "frontend:build:development"
+          "buildTarget": "front-end:build:development"
         }
       },
       "defaultConfiguration": "development"
