--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,4 +29,4 @@ jobs:
           firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_TEST_WF_UPDATING }}
           channelId: live
           projectId: test-wf-updating
-          entryPoint: ./apps/frontend
+          entryPoint: ./
